<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/id"
        android:inputType="number"
   />

    <EditText
        android:id="@+id/PersonName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:ems="10"
        android:layout_below="@id/id"
        android:inputType="textPersonName"
        android:text="@string/name" />

    <EditText
        android:id="@+id/EmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_below="@id/PersonName"
        android:inputType="textEmailAddress"
        />

    <Button
        android:id="@+id/buttonInsert"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/EmailAddress"
        android:text="@string/insertbttn" />

    <Button
        android:id="@+id/goto2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonInsert"
        android:text="@string/goto2" />

    <Button
        android:id="@+id/goto3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/goto2"
        android:text="@string/goto3" />
</RelativeLayout>