<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity3">

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="114dp"
        android:layout_marginEnd="123dp"
        android:layout_marginBottom="282dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/name"
        app:layout_constraintBottom_toTopOf="@+id/printbttn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <Button
        android:id="@+id/printbttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/printbttn"
        android:layout_below="@id/editText"
        tools:layout_editor_absoluteX="75dp"
        tools:layout_editor_absoluteY="441dp" />

    <Button
        android:id="@+id/deletebttn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deletebttn"
        android:layout_below="@id/printbttn"
        tools:layout_editor_absoluteX="273dp"
        tools:layout_editor_absoluteY="441dp" />

    <Button
        android:id="@+id/goto1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/deletebttn"
        android:text="@string/goto1" />
</RelativeLayout>